add prisma import for merging schema

--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "migrate:status": "npx prisma migrate status --preview-feature",
     "migrate:resolve": "npx prisma migrate resolve --preview-feature",
     "prisma:studio": "npx prisma studio",
-    "prisma:generate": "npx prisma generate",
+    "prisma:generate": "npm run prisma:merge:schema && npx prisma generate",
     "prisma:generate:watch": "npx prisma generate --watch",
+    "prisma:merge:schema":"npx prisma-import -s \"./prisma/models/*.prisma\" -o \"./prisma/schema.prisma\" ",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -99,6 +100,7 @@
     "prisma": "^4.16.1",
     "prisma-dbml-generator": "0.10.0-dev.0",
     "prisma-erd-generator": "^1.6.2",
+    "prisma-import": "^1.0.4",
     "supertest": "6.3.3",
     "ts-jest": "29.0.5",
     "ts-loader": "9.4.2",
