add prisma generator docs

--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "migrate:status": "npx prisma migrate status --preview-feature",
     "migrate:resolve": "npx prisma migrate resolve --preview-feature",
     "prisma:studio": "npx prisma studio",
-    "prisma:generate": "npm run prisma:merge:schema && npx prisma generate",
+    "prisma:generate": "npm run prisma:merge:schema && npm run prisma:generate:docs &&npx prisma generate",
     "prisma:generate:watch": "npx prisma generate --watch",
-    "prisma:merge:schema":"npx prisma-import -s \"./prisma/models/*.prisma\" -o \"./prisma/schema.prisma\" ",
+    "prisma:merge:schema": "npx prisma-import -s \"./prisma/models/*.prisma\" -o \"./prisma/schema.prisma\" ",
+    "prisma:generate:docs": "npx prisma-docs-generator serve",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -99,6 +100,7 @@
     "prettier": "2.8.4",
     "prisma": "^4.16.1",
     "prisma-dbml-generator": "0.10.0-dev.0",
+    "prisma-docs-generator": "^0.8.0",
     "prisma-erd-generator": "^1.6.2",
     "prisma-import": "^1.0.4",
     "supertest": "6.3.3",
