--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "migrate:status": "npx prisma migrate status --preview-feature",
     "migrate:resolve": "npx prisma migrate resolve --preview-feature",
     "prisma:studio": "npx prisma studio",
-    "prisma:generate": "npm run prisma:merge:schema && npm run prisma:generate:docs &&npx prisma generate",
+    "prisma:generate": "npm run prisma:merge:schema && npx prisma generate",
     "prisma:generate:watch": "npx prisma generate --watch",
     "prisma:merge:schema": "npx prisma-import -s \"./prisma/models/*.prisma\" -o \"./prisma/schema.prisma\" ",
-    "prisma:generate:docs": "npx prisma-docs-generator serve",
+    "prisma:docs": "npx prisma-docs-generator serve",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -56,6 +56,7 @@
   "dependencies": {
     "@apollo/server": "^4.5.0",
     "@devoxa/prisma-relay-cursor-connection": "2.2.2",
+    "@nestjs-hybrid-auth/all": "^1.3.0",
     "@nestjs/apollo": "11.0.3",
     "@nestjs/common": "9.3.10",
     "@nestjs/config": "2.3.1",
