feat: adjustment staging env

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 # POSTGRES
-POSTGRES_USER=prisma
-POSTGRES_PASSWORD=topsecret
-POSTGRES_DB=blog
+POSTGRES_USER=killabyss
+POSTGRES_PASSWORD=password
+POSTGRES_DB=nest-prisma-starter
 
 # Nest run locally
 DB_HOST=localhost
 # Nest run in docker, change host to database container name
 # DB_HOST=postgres
 DB_PORT=5432
-DB_SCHEMA=blog
+DB_SCHEMA=nest_prisma_starter
 
 # Prisma database connection
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?schema=${DB_SCHEMA}&sslmode=prefer
@@ -19,3 +19,13 @@ PORT=3000
 # Security
 JWT_ACCESS_SECRET=nestjsPrismaAccessSecret
 JWT_REFRESH_SECRET=nestjsPrismaRefreshSecret
+
+# Social Login
+FACEBOOK_CLIENT_ID=599195775629791
+FACEBOOK_CLIENT_SECRET=d24a71dbb8efad2ef45f24e64490fea5
+FACEBOOK_CALLBACK_URL=http://localhost:3000/auth/facebook-login/callback
+
+
+GOOGLE_CLIENT_ID=279390455711-b1ljprr5as09ncojjb4irvr1sni37upd.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google-login/callback
