--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "graphql": "16.6.0",
     "graphql-scalars": "1.20.1",
     "graphql-subscriptions": "2.0.0",
+    "graphql-upload": "13.0.0",
     "nestjs-prisma": "0.20.0",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
@@ -90,6 +91,7 @@
     "@types/bcrypt": "5.0.0",
     "@types/chance": "1.1.3",
     "@types/express": "4.17.17",
+    "@types/file-type": "^10.9.1",
     "@types/jest": "29.4.0",
     "@types/node": "^18.15.0",
     "@types/supertest": "2.0.12",
